# Slate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/slate/presets/markdown/: atlas-notes.tsv  frost-notes.tsv  mono-focus.tsv  orchard-notes.tsv  paper-ink.tsv  quiet-notes.tsv  signal-notes.tsv  sunrise-notes.tsv  vivid-notes.tsv
assets/slate/presets/shell/: ember-night.tsv  graphite-night.tsv  high-contrast.tsv  midnight-cobalt.tsv  orchid-dusk.tsv  paper-day.tsv  pine-night.tsv  polar-day.tsv  slate-night.tsv
cmake/: AppMetadata.cmake
docs/: ARCHITECTURE.md  SHORTCUTS.md  TODOS.md
src/App/: Application.cpp  Application.h
src/App/DefaultModules/: DefaultModules.cpp  DefaultModules.h
src/App/Resources/: WindowsApp.rc.in
src/App/Runtime/: main.cpp
src/App/Slate/: AssetService.cpp  AssetService.h  DocumentService.cpp  DocumentService.h  EditorDocumentViewModel.cpp  EditorDocumentViewModel.h  EditorSettingsService.cpp  EditorSettingsService.h  HistoryService.cpp  HistoryService.h  JournalService.cpp  JournalService.h  LinkService.cpp  LinkService.h  MarkdownService.cpp  MarkdownService.h  NavigationController.cpp  NavigationController.h  PathUtils.cpp  PathUtils.h  ScintillaEditorHost.cpp  ScintillaEditorHost.h  SearchService.cpp  SearchService.h  SettingsFile.cpp  SlateEditorContext.cpp  SlateEditorContext.h  SlateTypes.h  SlateUiState.cpp  SlateUiState.h  SlateWorkspaceContext.cpp  SlateWorkspaceContext.h  ThemeService.cpp  ThemeService.h  WorkspaceRegistryService.cpp  WorkspaceRegistryService.h  WorkspaceService.cpp  WorkspaceService.h  WorkspaceTree.cpp  WorkspaceTree.h
src/App/Slate/Commands/: SlateCommandDispatcher.cpp  SlateCommandDispatcher.h
src/App/Slate/Core/: AppPaths.cpp  AppPaths.h  NavigationController.cpp  NavigationController.h  PathUtils.cpp  SettingsFile.cpp  SettingsFile.h  SlateModeIds.h  SlateTypes.h
src/App/Slate/Documents/: AssetService.cpp  AssetService.h  DocumentService.cpp  DocumentService.h  HistoryService.cpp  HistoryService.h  LinkService.cpp  LinkService.h
src/App/Slate/Editor/: EditorDocumentViewModel.cpp  EditorDocumentViewModel.h  EditorSettingsService.cpp  EditorSettingsService.h  ScintillaEditorHost.cpp  ScintillaEditorHost.h  SlashCommandService.cpp  SlashCommandService.h  SlateEditorContext.cpp  SlateEditorContext.h
src/App/Slate/Input/: ShortcutService.cpp  ShortcutService.h
src/App/Slate/Markdown/: JournalService.cpp  JournalService.h  MarkdownService.cpp  MarkdownService.h
src/App/Slate/Modules/Commands/: SlateCommandModule.cpp  SlateCommandModule.h
src/App/Slate/Modules/Editor/: SlateEditorModule.cpp  SlateEditorModule.h
src/App/Slate/Modules/Routes/: SlateRouteModule.cpp  SlateRouteModule.h
src/App/Slate/Modules/Startup/: SlateStartupModule.cpp  SlateStartupModule.h
src/App/Slate/Modules/Todos/: SlateTodoModule.cpp  SlateTodoModule.h
src/App/Slate/Modules/Ui/: SlateUiModule.cpp  SlateUiModule.h
src/App/Slate/Modules/Workspace/: SlateWorkspaceModule.cpp  SlateWorkspaceModule.h
src/App/Slate/Overlays/: SlateSearchOverlayController.cpp  SlateSearchOverlayController.h  SlateTodoOverlayController.cpp  SlateTodoOverlayController.h  SlateWorkspaceSwitcherOverlay.cpp  SlateWorkspaceSwitcherOverlay.h
src/App/Slate/State/: SlateUiState.cpp  SlateUiState.h  SlateWorkspaceContext.cpp  SlateWorkspaceContext.h
src/App/Slate/Todos/: TodoService.cpp  TodoService.h
src/App/Slate/UI/: SlateUi.cpp  SlateUi.h
src/App/Slate/Workspace/: SearchService.cpp  SearchService.h  ThemeService.cpp  ThemeService.h  WorkspaceRegistryService.cpp  WorkspaceRegistryService.h  WorkspaceService.cpp  WorkspaceService.h  WorkspaceTree.cpp  WorkspaceTree.h
src/App/UI/DetailsPanel/: DetailsPanel.cpp  DetailsPanel.h
src/App/UI/ToolbarPanel/: ToolbarPanel.cpp  ToolbarPanel.h
src/App/UI/TopBarPanel/: TopBarPanel.cpp  TopBarPanel.h
src/Features/Diagnostics/: DiagnosticsFeature.cpp  DiagnosticsFeature.h
src/Features/Sample/: SampleFeature.cpp  SampleFeature.h
src/Features/Slate/Editor/: SlateEditorFeature.cpp  SlateEditorFeature.h
src/Features/Slate/Ui/: SlateUiFeature.cpp  SlateUiFeature.h
src/Features/Slate/Workspace/: SlateWorkspaceFeature.cpp  SlateWorkspaceFeature.h
src/Features/SlateEditor/: SlateEditorFeature.cpp  SlateEditorFeature.h
src/Features/SlateUi/: SlateUiFeature.cpp  SlateUiFeature.h
src/Features/SlateWorkspace/: SlateWorkspaceFeature.cpp  SlateWorkspaceFeature.h
src/Framework/Core/Runtime/: AppConfig.h.in  AppContext.h  CommandRegistry.cpp  CommandRegistry.h  EventBus.cpp  EventBus.h  Feature.h  FeatureRegistry.cpp  FeatureRegistry.h  InputEvents.h  InputRouter.cpp  InputRouter.h  Mode.h  Module.h  ModuleRegistry.cpp  ModuleRegistry.h  ServiceLocator.cpp  ServiceLocator.h  ToolRegistry.cpp  ToolRegistry.h
src/Framework/Core/UI/: IPanel.h  PanelHost.cpp  PanelHost.h
src/Framework/Platform/: PlatformLayer.cpp  PlatformLayer.h  PlatformWindowService.h
src/Framework/Services/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  ISettings.cpp  ISettings.h  SettingsStore.cpp  SettingsStore.h
src/Modes/Example/: ExampleMode.cpp  ExampleMode.h
src/Modes/Slate/: SlateAppMode.cpp  SlateAppMode.h  SlateAppModeInput.cpp  SlateAppModeWorkspace.cpp  SlateBrowserMode.cpp  SlateBrowserMode.h  SlateEditorMode.cpp  SlateEditorMode.h  SlateHomeMode.cpp  SlateHomeMode.h  SlateModeBase.cpp  SlateModeBase.h  SlateSettingsMode.cpp  SlateSettingsMode.h  SlateWorkspaceMode.cpp  SlateWorkspaceMode.h
tests/: SlateCoreTests.cpp
